# adventofcode-2022

./: .gitignore
common/ocaml/: helpers.ml
common/racket/: helpers.rkt  install.sh  main.rkt
day1/ocaml/: helpers.ml  solve  solve.ml
day1/racket/: 2.rkt  input
day10/ocaml/: solve.ml
day11/ocaml/: solve.ml
day12/ocaml/: part1.ml  part2.ml  solve.ml  solve1.ml  solve2.ml
day13/ocaml/: solve.ml
day14/ocaml/: part1.ml  part2.ml
day15/ocaml/: part1.ml  part2.ml
day2/ocaml/: solve.ml
day2/racket/: 1.rkt  2.rkt  input
day3/ocaml/: solve.ml
day4/: 4.html
day4/ocaml/: solve.ml
day5/ocaml/: helpers.ml  solve.ml
day6/ocaml/: solve.ml
day7/ocaml/: solve.ml
day8/ocaml/: solve.ml  solve1.ml  solve2.ml
day9/ocaml/: funcs.ml  input.test  solve.ml
ocaml/days/: day1.ml  day10.ml  day11.ml  day12p1.ml  day12p2.ml  day13.ml  day14p1.ml  day14p2.ml  day15p1.ml  day15p2.ml  day16p1.ml  day17.ml  day18.ml  day2.ml  day20.ml  day21.ml  day22.ml  day23.ml  day24.ml  day25.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8p1.ml  day8p2.ml  day9.ml  dune  utop.sh
ocaml/lib/: dune  helpers.ml
racket/: 1.rkt
